--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PUSHER_APP_ID="1042567"
-PUSHER_APP_KEY="869cc67a03a2f36de6d0"
-PUSHER_APP_SECRET="7d825e882263723d2815"
-PUSHER_APP_CLUSTER="ap2"
+app_id = "1042567"
+key = "51f31dd16aca0958aba9"
+secret = "8945fa9b8a592c63092c"
+cluster = "ap2"
